--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
                             <span></span>
                         </button>
                         <ul class="menu">
-                            <li><a href="/">О компании</a></li>
+                            <li><a href="index.html">О компании</a></li>
                             
-                            <li><a href="/">Юридические услуги</a><span class="triangle"></span>
+                            <li><a href="index.html">Юридические услуги</a><span class="triangle"></span>
                                 <ul>
-                                    <li><a href="/">О компании</a></li>
-                                    <li><a href="/">Юридические услуги</a></li>
+                                    <li><a href="index.html">О компании</a></li>
+                                    <li><a href="index.html">Юридические услуги</a></li>
                                 </ul>
                             </li>
-                            <li><a href="/">Готовые фирмы</a></li>
-                            <li><a href="/">Бухгалтерские услуги</a></li>
-                            <li><a href="/">Вакансия</a></li>
-                            <li><a href="/">Отзывы</a></li>
-                            <li><a href="/">Контакты</a></li>
+                            <li><a href="index.html">Готовые фирмы</a></li>
+                            <li><a href="index.html">Бухгалтерские услуги</a></li>
+                            <li><a href="index.html">Вакансия</a></li>
+                            <li><a href="index.html">Отзывы</a></li>
+                            <li><a href="index.html">Контакты</a></li>
                         </ul>
                     </div>
                 </div>
@@ -149,20 +149,20 @@
                             <p>Также рады предложить Вам следующие юридические услуги:</p>
 
                             <ul>
-                                <li><a href="/">Регистрация ООО</a></li>
-                                <li><a href="/">Регистрация ИП</a></li>
-                                <li><a href="/">Регистрация ОАО, ЗАО</a></li>
-                                <li><a href="/">Внесение изменений в ЕГРЮЛ и Учредительные документы</a></li>
-                                <li><a href="/">Смена директора</a></li>
-                                <li><a href="/">Смена юридического адреса</a></li>
-                                <li><a href="/">Смена участников ООО</a></li>
-                                <li><a href="/">Смена наименования</a></li>
-                                <li><a href="/">смена видов деятельности</a></li>
-                                <li><a href="/">Перерегистрация ООО</a></li>
-                                <li><a href="/">Изменение величины уставного капитала</a></li>
-                                <li><a href="/">Ликвидация коммерческих организаций</a></li>
-                                <li><a href="/">Юридическое и бухгалтерское сопровождение организаций</a></li>
-                                <li><a href="/">Аккредитация иностранного представительства</a></li>
+                                <li><a href="index.html">Регистрация ООО</a></li>
+                                <li><a href="index.html">Регистрация ИП</a></li>
+                                <li><a href="index.html">Регистрация ОАО, ЗАО</a></li>
+                                <li><a href="index.html">Внесение изменений в ЕГРЮЛ и Учредительные документы</a></li>
+                                <li><a href="index.html">Смена директора</a></li>
+                                <li><a href="index.html">Смена юридического адреса</a></li>
+                                <li><a href="index.html">Смена участников ООО</a></li>
+                                <li><a href="index.html">Смена наименования</a></li>
+                                <li><a href="index.html">смена видов деятельности</a></li>
+                                <li><a href="index.html">Перерегистрация ООО</a></li>
+                                <li><a href="index.html">Изменение величины уставного капитала</a></li>
+                                <li><a href="index.html">Ликвидация коммерческих организаций</a></li>
+                                <li><a href="index.html">Юридическое и бухгалтерское сопровождение организаций</a></li>
+                                <li><a href="index.html">Аккредитация иностранного представительства</a></li>
                             </ul>
                         </section>
                     </div>
@@ -258,13 +258,13 @@
                     <div class="row">
                         <div class="col-md-12">
                             <ul class="menu">
-                                <li><a href="/">О компании</a></li>
-                                <li><a href="/">Юридические услуги</a></li>
-                                <li><a href="/">Готовые фирмы</a></li>
-                                <li><a href="/">Бухгалтерские услуги</a></li>
-                                <li><a href="/">Вакансия</a></li>
-                                <li><a href="/">Отзывы</a></li>
-                                <li><a href="/">Контакты</a></li>
+                                <li><a href="index.html">О компании</a></li>
+                                <li><a href="index.html">Юридические услуги</a></li>
+                                <li><a href="index.html">Готовые фирмы</a></li>
+                                <li><a href="index.html">Бухгалтерские услуги</a></li>
+                                <li><a href="index.html">Вакансия</a></li>
+                                <li><a href="index.html">Отзывы</a></li>
+                                <li><a href="index.html">Контакты</a></li>
                             </ul>
                         </div>
                     </div>
